force-app/main/default/objects/Contact/fields/Current_VOIP__c.field-meta.xml
<CustomField>
    <fullName>Current_VOIP__c</fullName>
    <label>Current VOIP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_VOIP</valueSetName>
    </valueSet>
</CustomField>