force-app/main/default/objects/Contact/fields/Customer_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Customer_Timestamp__c</fullName>
    <label>Customer Timestamp</label>
    <type>DateTime</type>
</CustomField>