force-app/main/default/objects/Contact/fields/Dazos_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Dazos_Lead_ID__c</fullName>
    <label>Dazos Lead ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>