force-app/main/default/objects/Contact/fields/Disqualified_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason_Detail__c</fullName>
    <label>Disqualified Reason Detail</label>
    <type>TextArea</type>
</CustomField>