force-app/main/default/objects/Contact/fields/Disqualified_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Timestamp__c</fullName>
    <label>Disqualified Timestamp</label>
    <type>DateTime</type>
</CustomField>