force-app/main/default/objects/Contact/fields/FlowToggle__c.field-meta.xml
<CustomField>
    <fullName>FlowToggle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used for flow to bypass validation rules.</description>
    <label>FlowToggle</label>
    <type>Checkbox</type>
</CustomField>