force-app/main/default/objects/Contact/fields/Headquarters__c.field-meta.xml
<CustomField>
    <fullName>Headquarters__c</fullName>
    <label>Headquarters</label>
    <type>Address</type>
</CustomField>