force-app/main/default/objects/Contact/fields/Lead_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Company_Name__c</fullName>
    <label>Lead Company Name</label>
    <type>TextArea</type>
</CustomField>