force-app/main/default/objects/Contact/fields/Lead_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Lead_Timestamp__c</fullName>
    <label>Lead Timestamp</label>
    <type>DateTime</type>
</CustomField>