force-app/main/default/objects/Contact/fields/Lost_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Lost_Timestamp__c</fullName>
    <label>Lost Timestamp</label>
    <type>DateTime</type>
</CustomField>