force-app/main/default/objects/Contact/fields/MQL_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>MQL_Timestamp__c</fullName>
    <label>MQL Timestamp</label>
    <type>DateTime</type>
</CustomField>