force-app/main/default/objects/Contact/fields/Nurture_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Timestamp__c</fullName>
    <label>Nurture Timestamp</label>
    <type>DateTime</type>
</CustomField>