force-app/main/default/objects/Contact/fields/Opportunity_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Timestamp__c</fullName>
    <label>SQO Timestamp</label>
    <type>DateTime</type>
</CustomField>