force-app/main/default/objects/Contact/fields/Prospecting_Result__c.field-meta.xml
<CustomField>
    <fullName>Prospecting_Result__c</fullName>
    <label>Prospecting Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>