force-app/main/default/objects/Contact/fields/Prospecting_Result_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Prospecting_Result_Timestamp__c</fullName>
    <label>Prospecting Result Timestamp</label>
    <type>DateTime</type>
</CustomField>