force-app/main/default/objects/Contact/fields/SQL_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>SQL_Timestamp__c</fullName>
    <label>SQL Timestamp</label>
    <type>DateTime</type>
</CustomField>