force-app/main/default/objects/Contact/fields/X18_Digit_SFDC_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_SFDC_Contact_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>18 Digit SFDC Contact ID</label>
    <type>Text</type>
</CustomField>