force-app/main/default/objects/Contact/validationRules/Must_Use_Button_to_Disqualify_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Use_Button_to_Disqualify_Contact</fullName>
    <active>true</active>
    <description>forces user to use the Action button to go through contact disqualification process rather then moving the stage manually.</description>
    <errorConditionFormula>AND(
ISCHANGED(Lifecycle_Stage__c),
ISPICKVAL(Lifecycle_Stage__c, &quot;Disqualified&quot;),
NOT(ISCHANGED(FlowToggle__c)),
NOT(
$Profile.Name = &quot;Salesforce API Only System Integrations&quot;
)
)</errorConditionFormula>
    <errorMessage>Please use the Disqualify Contact button to update the contact stage to Disqualified.</errorMessage>
</ValidationRule>