force-app/main/default/objects/Contact/listViews/X2025_Behavioral_Health_Tech.listView-meta.xml
<ListView>
    <fullName>X2025_Behavioral_Health_Tech</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Lifecycle_Stage__c</columns>
    <columns>ACCOUNT.OWNER.ALIAS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <label>2025_Behavioral Health Tech</label>
</ListView>